--- a/conference/LinuxPlumbers2018/presentation_notes.org
+++ b/conference/LinuxPlumbers2018/presentation_notes.org
@@ -285,7 +285,7 @@ userspace.  AF_XDP goes the other way, and let userspace (pre) alloc.
    all-or-nothing proposition like we have seen with DPDK.
 
    AF_XDP avoids the overhead by establishing SPSC queues as communication
-   channels to userspace.  The copy is avoided by userspace alloacting and
+   channels to userspace.  The copy is avoided by userspace allocating and
    gifting/providing kernel with this memory, which is used directly for RX
    DMA delivery.
 
@@ -303,7 +303,7 @@ XDP usual performance benefit comes from in-kernel processing via BPF
 AF_XDP is for faster raw packet delivery into userspace
  - Hooking into XDP, provides packet filter flexibility
  - Performance tricks:
-   - Preallocated userspace memory, getting fill by kernel
+   - Preallocated userspace memory, give it to kernel for NIC RX-rings
    - NetChannel like SPSC queues between kernel and userspace
  - Unlike tcpdump, as it owns/steals the packet
    * Might want to invent/allow a copy and XDP_PASS mode.
