--- a/conference/LinuxPlumbers2018/presentation_notes.org
+++ b/conference/LinuxPlumbers2018/presentation_notes.org
@@ -1,5 +1,20 @@
 # -*- fill-column: 79; -*-
 #+TITLE: Notes for netdev-track at LinuxPlumbers 2018
+#+AUTHOR: Jesper Dangaard Brouer and Toke Høiland-Jørgensen
+#+EMAIL: toke@toke.dk
+#+REVEAL_HLEVEL: 2
+#+REVEAL_THEME: white
+#+REVEAL_TRANS: linear
+#+REVEAL_MARGIN: .1
+#+REVEAL_EXTRA_CSS: ./reveal.js/css/custom.css
+#+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom.js'}
+#+REVEAL_DEFAULT_SLIDE_BACKGROUND: ./images/logo.svg
+#+REVEAL_DEFAULT_SLIDE_BACKGROUND_POSITION: bottom left
+#+REVEAL_DEFAULT_SLIDE_BACKGROUND_SIZE: 4em
+#+REVEAL_TITLE_SLIDE_BACKGROUND: ./images/logo.svg
+#+REVEAL_TITLE_SLIDE_BACKGROUND_POSITION: bottom left
+#+REVEAL_TITLE_SLIDE_BACKGROUND_SIZE: 4em
+#+OPTIONS: reveal_control:nil reveal_history:t reveal_width:1600 reveal_height:1000 ^:nil tags:nil toc:nil
 
 Trying to organize and structure the presentation for Linux Plumbers Conference
 2018 Networking Track.
@@ -105,7 +120,6 @@ PHYlink and SFP: Going beyond 1G Copper PHYs
 
 
 * Topics and slides
-
 *IDEA* for organizing presentation:
 
 The presentation will be organized around a number of XDP-topics.  We cannot
@@ -134,7 +148,7 @@ topic, this text could be used in the paper.
    Besides referencing the topics covered in other talks, we have also selected
    some XDP topics that we wish to soliciting feedback om from this community.
 
-** Slide: XDP-paper
+** Slide: XDP-paper                                                 :export:
 
 Scientific XDP paper accepted
  - Title: "The eXpress Data Path: Fast Programmable Packet Processing in the Operating System Kernel"
@@ -152,7 +166,7 @@ Be inspirational: New programmable layer in network stack
 Keep it very short, if possible 1-slide.  This is mostly for people finding this
 slide deck, or LPC people that don't know that XDP is.
 
-** Slide: What is XDP
+** Slide: What is XDP                                               :export:
 
 XDP basically: New layer in the kernel network stack
  - Before allocating the SKB
@@ -167,7 +181,7 @@ Not kernel bypass, data-plane is kept inside kernel
  - via BPF: makes early network stack run-time programmable
  - Cooperates with kernel
 
-** Slide: XDP is a huge success
+** Slide: XDP is a huge success                                     :export:
 
 XDP is maturing in upstream kernels
  - Still under active development
@@ -178,7 +192,7 @@ Very popular topic at this LPC network-track miniconf
    - We will mention and frame these talk in the bigger XDP picture
  - 4 related to eBPF
 
-** Slide: Production use-cases
+** Slide: Production use-cases                                      :export:
 
 (Pitch: Can people actually use this in production, even-though XDP is still
 under much developement)
@@ -199,7 +213,7 @@ Guiding principle: Adding features must not negatively affect baseline XDP
 performance.  Use optimization technique of moving runtime checks to setup time
 checks.
 
-** Slide: New XDP features and performance requirement
+** Slide: New XDP features and performance requirement              :export:
 
 XDP is all about performance
  - Watch-out that feature creep doesn't kill performance!
@@ -232,7 +246,7 @@ program called xdp_router_ipv4, which was done before the FIB-lookup helper was
 added.  The performance advantage is very small, and only occurs when
 xdp_router_ipv4 sample hit an "exact_match" cache.
 
-** Slide: Evolving XDP via BPF-helpers
+** Slide: Evolving XDP via BPF-helpers                              :export:
 
 See: XDP as software offloading layer for kernel network stack
  - Setup and use Linux kernel network stack
@@ -265,7 +279,7 @@ should be able to write a data-plane in domain-specific language like P4. And
 to use load this in a XDP hook, you need to write a new backend to your P4
 compiler that generate the XDP/eBPF code.
 
-** Slide: XDP as a building block
+** Slide: XDP as a building block                                   :export:
 
 XDP is a core kernel layer building block
  - Open Source projects should build and innovate on top
@@ -310,7 +324,7 @@ userspace.  AF_XDP goes the other way, and let userspace (pre) alloc.
    On the TX-side AF_XDP does have a syscall, but userspace can fill
    several TX buffers into TX ring before calling the sendmsg syscall.
 
-** Slide: Zero-copy to userspace AF_XDP
+** Slide: Zero-copy to userspace AF_XDP                             :export:
 
 XDP usual performance benefit comes from in-kernel processing via BPF
  - (avoiding context switch to userspace)
@@ -339,7 +353,7 @@ Two talks about AF_XDP on schedule:
    (e.g. csum-info, rxhash, HW-mark) in a vendor neutral and generic way.  This
    depends/waits on metadata talk, for this to be generic enough.
 
-** Slide: Move SKB allocation out of driver
+** Slide: Move SKB allocation out of driver                         :export:
 
 Long term goal:
  - Write NIC driver(s) without SKB allocations
@@ -355,7 +369,7 @@ Missing part: driver offloads (e.g. csum-info, rxhash, HW-mark)
 Hope this will be resolved covered in talk:
  - Talk: "XDP acceleration using NIC metadata, continued"
 
-** Slide/topic (maybe skip): Jumbo-frames
+** Slide/topic (maybe skip): Jumbo-frames                           :export:
 
 (Topic text) People in XDP-newbies list request jumbo-frames. They don't seem
 to understand to support high-speed packet processing, we cannot support this
@@ -398,7 +412,7 @@ consumes HW resources.  Given the TX queue per CPU core assumption, this makes
 it problematic on systems with many CPU cores. E.g. it was discovered the ixgbe
 driver cannot load XDP on systems with more than 96 CPU cores.
 
-** Slide: Controlling resources for ndo_xdp_xmit
+** Slide: Controlling resources for ndo_xdp_xmit                    :export:
 
 Redirecting XDP frame out another net_device, call ndo_xdp_xmit
  - But egress net_device don't default alloc XDP-TX resouces
@@ -431,7 +445,7 @@ Original goal of not exposing feature-bits to userspace, was to force full
 support for XDP in all drivers.  Is this goal still realistic, after X kernel
 releases, where only 3 HW-drivers have implemented XDP_REDIRECT.
 
-** Slide: What does XDP driver support?
+** Slide: What does XDP driver support?                             :export:
 
 Today: Userspace cannot query what XDP features NIC driver support
  - Original goal of not exposing feature-bits to userspace:
@@ -475,7 +489,7 @@ have been very Intel focused, the DMA overhead have seen much attention. The
 Spectre-V2 mitigation changed the picture. and will force us to address the DMA
 overhead issues due to the indirect call API.
 
-** Slide: Memory models
+** Slide: Memory models                                             :export:
 
 Recent (4.18): XDP memory models per driver RX-queue
  - New flexibility to innovate
@@ -486,7 +500,7 @@ Planned changes
  - Extend xdp_return_frame API with bulking, performance reasons
  - Keep pages DMA mapped in page_pool (almost supported)
 
-** Slide: DMA mapping
+** Slide: DMA mapping                                               :export:
 
 More optimizations for DMA mapping needed
  - Was low priority, due to almost zero cost on Intel CPUs
@@ -525,7 +539,7 @@ More optimizations for DMA mapping needed
    DMA-TX addr could be stored in xdp_frame, then xdp_return_frame API could
    also handle the DMA-unmap call.
 
-** Slide: Performance issue: Spectre (variant 2)
+** Slide: Performance issue: Spectre (variant 2)                    :export:
 
 CONFIG_RETPOLINE and newer GCC compiler
  - for stopping Spectre (variant 2) CPU side-channel attacks
@@ -582,3 +596,21 @@ issues, that I need to upstream fix for)
 
 
 * Notes
+
+** Setup for org export to reveal.js
+First, install the ox-reveal emacs package.
+
+After this, move to the 'Topics and slides' subtree and hit =C-c C-e C-s R R=
+to export just the subtree; then open .html file to view slideshow. The
+variables below will set up the title slide and filter the "Slide:" prefix from
+headings; Emacs will ask for permission to load them, as they will execute
+code.
+
+
+# Local Variables:
+# org-reveal-title-slide: "<h1 class=\"title\">XDP - challenges and future work</h1><h2
+# class=\"author\">Jesper Dangaard Brouer (Red Hat)<br/>Toke Høiland-Jørgensen
+# (Karlstad University)</h2><h3>LPC Networking Track<br/>Vancouver, Nov
+# 2018</h3>"
+# org-export-filter-headline-functions: ((lambda (contents backend info) (replace-regexp-in-string "Slide: " "" contents)))
+# End:
