With subtree export we can actually use sub-slides if we set HLEVEL to 1
Also enable controls to see when we have them

Signed-off-by: Toke Høiland-Jørgensen <toke@toke.dk>

--- a/conference/LinuxPlumbers2018/presentation_notes.org
+++ b/conference/LinuxPlumbers2018/presentation_notes.org
@@ -2,7 +2,6 @@
 #+TITLE: Notes for netdev-track at LinuxPlumbers 2018
 #+AUTHOR: Jesper Dangaard Brouer and Toke Høiland-Jørgensen
 #+EMAIL: toke@toke.dk
-#+REVEAL_HLEVEL: 2
 #+REVEAL_THEME: white
 #+REVEAL_TRANS: linear
 #+REVEAL_MARGIN: .1
@@ -14,7 +13,7 @@
 #+REVEAL_TITLE_SLIDE_BACKGROUND: ./images/logo.svg
 #+REVEAL_TITLE_SLIDE_BACKGROUND_POSITION: bottom left
 #+REVEAL_TITLE_SLIDE_BACKGROUND_SIZE: 4em
-#+OPTIONS: reveal_center:nil reveal_control:nil reveal_history:t reveal_width:1600 reveal_height:1000 ^:nil tags:nil toc:nil
+#+OPTIONS: reveal_center:nil reveal_control:t reveal_history:t reveal_width:1600 reveal_height:1000 ^:nil tags:nil toc:nil
 
 Trying to organize and structure the presentation for Linux Plumbers Conference
 2018 Networking Track.
