--- a/conference/LinuxPlumbers2018/xdp-future.bib
+++ b/conference/LinuxPlumbers2018/xdp-future.bib
@@ -5,3 +5,52 @@
   year = 2018,
   month = Dec
 }
+
+@Conference{cloudflare-ddos,
+	booktitle = {NetDev 2.1 - The Technical Conference on Linux Networking},
+	year = {2017},
+	title = {XDP in practice: integrating XDP in our DDoS mitigation pipeline},
+	author = {Gilberto Bertin}
+}
+@misc{katran,
+	url = {https://github.com/facebookincubator/katran},
+	year = {2018},
+	title = {Katran source code repository},
+	author = {Facebook}
+}
+
+@misc{suricata,
+url={https://suricata.readthedocs.io/en/latest/capture-hardware/ebpf-xdp.html},
+title={Suricata - {eBPF} and {XDP}},
+author={Suricata authors},
+year={2018}
+}
+
+@misc{ovs-xdp,
+url={https://mail.openvswitch.org/pipermail/ovs-dev/2018-August/351295.html},
+title={[ovs-dev] {AF\_XDP} support for {OVS}},
+author={William Tu},
+year={2018}
+}
+
+@misc{dpdk-xdp,
+url={http://mails.dpdk.org/archives/dev/2018-February/091502.html},
+title={[dpdk-dev] {PMD} driver for {AF\_XDP}},
+author={Qi Zhang},
+year={2018}
+}
+
+
+
+@inproceedings{facebook-lessons,
+  author = {Nikita V. Shirokov},
+  title = {{XDP} 1.5 years in production. Evolution and lessons learned},
+  booktitle = {Linux Plumbers Conference 2018 Networking Track},
+  year = 2018,
+}
+@inproceedings{facebook-firewall,
+  author = {Anant Deepak and Richard Huang and Puneet Mehra},
+  title = {{eBPF / XDP} based firewall and packet filtering},
+  booktitle = {Linux Plumbers Conference 2018 Networking Track},
+  year = 2018,
+}
