--- a/conference/LinuxPlumbers2018/xdp-future.bib
+++ b/conference/LinuxPlumbers2018/xdp-future.bib
@@ -54,3 +54,9 @@ year={2018}
   booktitle = {Linux Plumbers Conference 2018 Networking Track},
   year = 2018,
 }
+@inproceedings{ahern-routing,
+  author = {David Ahern},
+  title = {Leveraging Kernel Tables with {XDP}},
+  booktitle = {Linux Plumbers Conference 2018 Networking Track},
+  year = 2018,
+}
