--- a/conference/LinuxPlumbers2018/xdp-future.bib
+++ b/conference/LinuxPlumbers2018/xdp-future.bib
@@ -60,3 +60,9 @@ year={2018}
   booktitle = {Linux Plumbers Conference 2018 Networking Track},
   year = 2018,
 }
+@inproceedings{xdp-metadata,
+  author = {P.J. Waskiewicz and Neerav Parikh},
+  title = {{XDP} acceleration using {NIC} metadata, continued},
+  booktitle = {Linux Plumbers Conference 2018 Networking Track},
+  year = 2018,
+}
