Import modified acmart.cls and use the CC-BY-SA license annotation
Signed-off-by: Toke Høiland-Jørgensen <toke@toke.dk>

--- a/conference/LinuxPlumbers2018/lpc18-xdp-future.tex
+++ b/conference/LinuxPlumbers2018/lpc18-xdp-future.tex
@@ -7,7 +7,7 @@
 \usepackage{booktabs}
 \usepackage{xcolor}
 
-\setcopyright{none}
+\setcopyright{ccbysa}
 \acmConference[LPC '18 Networking Track]{Linux Plumbers Conference 2018 Networking Track}{Nov 13--14,
 2018}{Vancouver, British Columbia}
 \acmISBN{}
