--- a/conference/LinuxPlumbers2018/xdp-future.bib
+++ b/conference/LinuxPlumbers2018/xdp-future.bib
@@ -66,3 +66,21 @@ year={2018}
   booktitle = {Linux Plumbers Conference 2018 Networking Track},
   year = 2018,
 }
+@inproceedings{xdp-p4,
+  author = {William Tu and Fabian Ruffy and Mihai Budiu},
+  title = {{P4C-XDP: Programming the Linux Kernel Forwarding Plane using P4}},
+  booktitle = {Linux Plumbers Conference 2018 Networking Track},
+  year = 2018,
+}
+@inproceedings{af-xdp,
+  author = {Magnus Karlsson and Björn Töpel},
+  title = {The Path to {DPDK} Speeds for {AF\_XDP}},
+  booktitle = {Linux Plumbers Conference 2018 Networking Track},
+  year = 2018,
+}
+@inproceedings{xdp-ovs,
+  author = {William Tu and Joe Stringer and Yifeng Sun and Yi-Hung Wei},
+  title = {Bringing The Power of {eBPF} to {Open vSwitch}},
+  booktitle = {Linux Plumbers Conference 2018 Networking Track},
+  year = 2018,
+}
