Update Slide: New XDP features and performance requirement
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation_notes.org
+++ b/conference/LinuxPlumbers2018/presentation_notes.org
@@ -231,6 +231,9 @@ New features must not negatively affect baseline XDP perf
 </font>@@
  - Optimization hint: move runtime checks to setup time
 
+Issue: Who is monitoring XDP performance?
+ - We need CI tests for this... but who will do this work?
+
 ** Topic: Evolving XDP
 
 How we imagine XDP getting extended.
